force-app/main/default/objects/SurgeonToTeam__c/SurgeonToTeam__c.object-meta.xml
<CustomObject>
    <description>this will house all the surgeons and their team and rep affiliations</description>
    <label>SurgeonToTeam</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>SurgeonToTeam Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SurgeonToTeams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>