force-app/main/default/objects/SurgeonToTeam__c/fields/MD__c.field-meta.xml
<CustomField>
    <fullName>MD__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MDM SAP ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>