force-app/main/default/objects/SurgeonToTeam__c/fields/NPI__c.field-meta.xml
<CustomField>
    <fullName>NPI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NPI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>