force-app/main/default/objects/SurgeonToTeam__c/fields/Sales_Rep_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Contact_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Rep Contact Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>