force-app/main/default/objects/SurgeonToTeam__c/fields/Surgeon_Id__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Surgeon Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>