force-app/main/default/objects/SurgeonToTeam__c/fields/Team_Name_Id__c.field-meta.xml
<CustomField>
    <fullName>Team_Name_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Team Name Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>