force-app/main/default/objects/SurgeonToTeam__c/fields/Territory_Code__c.field-meta.xml
<CustomField>
    <fullName>Territory_Code__c</fullName>
    <label>Territory Code</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>